<resources>
    <string name="app_name">Calc</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_delitel">/</string>
    <string name="btn_3">3</string>
    <string name="btn_multiply">X</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_plus">+</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equals">=</string>
<!--<string name="screen_result">Здесь результаты вычислений</string>-->
    <string name="blank_window">C</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="degree_overflow">Превышено значение</string>
    <string name="limit">Лимит операций</string>
    <string name="no_operation">Недопустимая операция</string>
</resources>