<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/calcScreen"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            android:text="Здесь результаты вычислений"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4">

        <Button android:text="@string/btn_1" />

        <Button android:text="@string/btn_2" />

        <Button android:text="@string/btn_3" />

        <Button android:text="@string/btn_delitel" />

        <Button android:text="@string/btn_4" />

        <Button android:text="@string/btn_5" />

        <Button android:text="@string/btn_6" />

        <Button android:text="@string/btn_multiply" />

        <Button android:text="@string/btn_7" />

        <Button android:text="@string/btn_8" />

        <Button android:text="@string/btn_9" />

        <Button android:text="@string/btn_minus" />

        <Button

            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/btn_0" />

        <Button android:text="@string/btn_dot" />

        <Button android:text="@string/btn_plus" />

        <Button
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:text="@string/btn_equals" />
    </GridLayout>


</FrameLayout>